--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="text-four">From TN-Coimbatore</div>
       </div>
       <div class="button">
-        <button>Hire Me</button>
+        <button> <a class="btn" href="https://www.linkedin.com/in/anish-m-9b4b55353?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">Hire Me</a></button>
       </div>
     </div>
   </section>
@@ -156,7 +156,7 @@
           reach out via email or connect with me on LinkedIn. I’ll get back to you as soon as possible!
           <br>
           Email: <a href="#">mpanish032@gmail.com </a><br>
-          LinkedIn: <a href="www.linkedin.com/in/anish-m-9b4b55353"> LinkedIn </a><br>
+          LinkedIn: <a href="https://www.linkedin.com/in/anish-m-9b4b55353?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"> LinkedIn </a><br>
           Location: <a
             href="https://www.google.com/search?q=coimbatore&rlz=1C1CHBF_enIN1133IN1133&oq=coimbatore&gs_lcrp=EgZjaHJvbWUqEggAEAAYQxjjAhixAxiABBiKBTISCAAQABhDGOMCGLEDGIAEGIoFMg8IARAuGEMYsQMYgAQYigUyDwgCEAAYQxixAxiABBiKBTIPCAMQABhDGLEDGIAEGIoFMgwIBBAuGEMYgAQYigUyDAgFEAAYQxiABBiKBTIMCAYQABhDGIAEGIoFMhIIBxAuGEMYrwEYxwEYgAQYigUyBwgIEAAYgAQyDAgJEAAYQxiABBiKBdIBCDMxNjZqMGo3qAIAsAIA&sourceid=chrome&ie=UTF-8">CBE-TAMILNADU
             INDIA</a> <br>
