--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Responsive Portfolio Website HTML CSS</title>
+  <title>Responsive Portfolio-Anish</title>
   <link rel="stylesheet" href="style.css" />
   <!-- Fontawesome CDN Link -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
@@ -78,7 +78,7 @@
             Always curious and constantly learning, I aim to create fast, functional, and visually engaging web experiences.
           </p>
           <div class="button">
-            <button><a class="btn" href="Images/photos/ANISH-without pic.pdf" download>Download CV</a></button>
+            <button><a class="btn" href="Images/photos/Anish Resume Updated.pdf" download>Download CV</a></button>
           </div>
         </div>
       </div>
