--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             Always curious and constantly learning, I aim to create fast, functional, and visually engaging web experiences.
           </p>
           <div class="button">
-            <button><a class="btn" href="Images/photos/Anish Resume Updated.pdf" download>Download CV</a></button>
+            <button><a class="btn" href="Images\photos\Anish Resume Updated.pdf" download>Download CV</a></button>
           </div>
         </div>
       </div>
