--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
         <div class="text-four">From TN-Coimbatore</div>
       </div>
       <div class="button">
-        <button> <a class="btn" href="https://www.linkedin.com/in/anish-m-9b4b55353?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">Hire Me</a></button>
+        <button> <a class="btn"
+            href="https://www.linkedin.com/in/anish-m-9b4b55353?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">Hire
+            Me</a></button>
       </div>
     </div>
   </section>
@@ -67,15 +69,20 @@
         <div class="right">
           <div class="topic">Designing Is My Passion</div>
           <p>
-            I'm a <span style="color: orangered;">Front-End Developer</span> with a passion for building responsive, user-friendly 
-            websites and web applications. I specialize in HTML, CSS, JavaScript, and modern frameworks like React. I focus on clean code, 
+            I'm a <span style="color: orangered;">Front-End Developer</span> with a passion for building responsive,
+            user-friendly
+            websites and web applications. I specialize in HTML, CSS, JavaScript, and modern frameworks like React. I
+            focus on clean code,
             accessibility, and performance to turn designs into pixel-perfect, interactive web experiences.
             <br>
-            From simple landing pages to full-scale single-page applications, I bring attention to detail, cross-browser compatibility, 
-            and a strong understanding of front-end best practices. I enjoy collaborating with designers and backend developers in agile 
+            From simple landing pages to full-scale single-page applications, I bring attention to detail, cross-browser
+            compatibility,
+            and a strong understanding of front-end best practices. I enjoy collaborating with designers and backend
+            developers in agile
             environments, and I'm experienced with tools like Git for version control.
             <br>
-            Always curious and constantly learning, I aim to create fast, functional, and visually engaging web experiences.
+            Always curious and constantly learning, I aim to create fast, functional, and visually engaging web
+            experiences.
           </p>
           <div class="button">
             <button><a class="btn" href="Images\photos\Anish Resume Updated.pdf" download>Download CV</a></button>
@@ -95,13 +102,13 @@
           <div class="topic">Skills Reflects Our Knowledge</div>
           <p>The tools we master and the technologies we work with speak volumes about our experience, problem-solving
             ability, and growth mindset. Here's a snapshot of the skills I've cultivated over time:
-            <h4 style="color: orangered;">FRONT END</h4>
-              <li>HTML</li>
-              <li>CSS</li>
-              <li>JAVASCRIPT</li>
-              <li>REACT</li>
-            
-            I'm constantly learning and adapting to stay updated with the latest in the industry./p>
+          <h4 style="color: orangered;">FRONT END</h4>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JAVASCRIPT</li>
+          <li>REACT</li>
+
+          I'm constantly learning and adapting to stay updated with the latest in the industry./p>
           <div class="experience">
             <div class="num">Fresher</div>
           </div>
@@ -112,7 +119,7 @@
   <section class="services" id="projects /Hobbies">
     <div class="content">
       <div class="title"><span> Projects / Hobbies</span></div>
-        <div class="boxes">
+      <div class="boxes">
         <div class="box">
           <div class="icon">
             <i class="fas fa-paint-brush"></i>
@@ -156,7 +163,9 @@
           reach out via email or connect with me on LinkedIn. I’ll get back to you as soon as possible!
           <br>
           Email: <a href="#">mpanish032@gmail.com </a><br>
-          LinkedIn: <a href="https://www.linkedin.com/in/anish-m-9b4b55353?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"> LinkedIn </a><br>
+          LinkedIn: <a
+            href="https://www.linkedin.com/in/anish-m-9b4b55353?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">
+            LinkedIn </a><br>
           Location: <a
             href="https://www.google.com/search?q=coimbatore&rlz=1C1CHBF_enIN1133IN1133&oq=coimbatore&gs_lcrp=EgZjaHJvbWUqEggAEAAYQxjjAhixAxiABBiKBTISCAAQABhDGOMCGLEDGIAEGIoFMg8IARAuGEMYsQMYgAQYigUyDwgCEAAYQxixAxiABBiKBTIPCAMQABhDGLEDGIAEGIoFMgwIBBAuGEMYgAQYigUyDAgFEAAYQxiABBiKBTIMCAYQABhDGIAEGIoFMhIIBxAuGEMYrwEYxwEYgAQYigUyBwgIEAAYgAQyDAgJEAAYQxiABBiKBdIBCDMxNjZqMGo3qAIAsAIA&sourceid=chrome&ie=UTF-8">CBE-TAMILNADU
             INDIA</a> <br>
