--- a/photography.html
+++ b/photography.html
@@ -174,6 +174,17 @@
             <img src="" alt="">
         </div>
     </div>
+
+        <!-- Preview Modal -->
+    <div id="preview" class="preview">
+        <span id="close">&times;</span>
+        <img id="preview-img" src="" alt="preview">
+    </div>
+
+    <script src="photography.js"></script>
+</body>
+</html>
+
 </body>
 
 </html>
